# gauze

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
src/gauze/: collection.py
src/gauze/matchers/: __init__.py  base.py  comparison.py  core.py  equal.py  helpers.py  mapping.py  object.py  sequence.py  text.py
tests/: test_collection.py  test_matchers.py  test_simple.py  test_validation.py
