[tool.poetry]
name = "gauze"
version = "0.1.0"
description = "A library for filtering and collecting objects"
authors = ["Lygon Bowen-West <l.bowenwest@googlemail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
typing-extensions = "^3.7.4"
pydantic = {version = "^1.7.3", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.800"
nox = "^2020.12.31"
nox-poetry = "^0.7.1"
pytest = "^6.2.2"
hypothesis = "^6.1.1"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-isort = "^4.0.0"

[tool.poetry.extras]
pydantic = ["pydantic"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

